--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="referrer" content="no-referrer"/>
     <link rel="stylesheet" href="guide/css/vue.css">
     <link rel="stylesheet" href="guide/css/sidebar.min.css"/>
+    <link rel="stylesheet" href="guide/css/docsify-darklight-theme.min.css"/>
 </head>
 <body>
 <div id="app">
@@ -61,6 +62,7 @@
 <script src="guide/js/docsify-sidebar-collapse.min.js"></script>
 <script src="guide/js/docsify-plugin-flexible-alerts.js"></script>
 <script src="guide/js/vanilla-back-to-top.min.js"></script>
+<script src="guide/js/docsify-darklight-theme.js"></script>
 
 <!-- 回到顶部功能 -->
 <script>
