--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                 hook.afterEach(function (html) {
                     return html + footer;
                 });
+            },
+            // mathjax
+            function (hook) {
+                hook.doneEach(function () {
+                    if (typeof MathJax !== 'undefined') {
+                        MathJax.Hub.Queue(["Typeset", MathJax.Hub])
+                    }
+                })
             }
         ]
     }
@@ -63,6 +71,21 @@
 <script src="guide/js/docsify-plugin-flexible-alerts.js"></script>
 <script src="guide/js/vanilla-back-to-top.min.js"></script>
 <script src="guide/js/docsify-darklight-theme.js"></script>
+
+<!-- 支持数学公式 -->
+<script src="https://cdn.bootcss.com/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      extensions: ["tex2jax.js"],
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+        processEscapes: true
+      },
+      "HTML-CSS": { availableFonts: ["TeX"] }
+    });
+</script>
 
 <!-- 回到顶部功能 -->
 <script>
