--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>侠客岛</title>
+    <title>TINY YAN</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="description" content="一个后端技术栈分享平台，主要收集后端相关的技术文档、读书笔记、专题学习等">
-    <meta name="keywords" content="侠客岛 后端 技术文档 读书笔记 专题学习"/>
+    <meta name="description" content="新昇半导体科技有限公司内部学习网站">
+    <meta name="keywords" content="新昇半导体科技有限公司 技术文档 专题学习"/>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="referrer" content="no-referrer"/>
